// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MacroList component should render active and disabled macros 1`] = `
<InfiniteScroll
  className="component"
  load={[Function]}
  loadMore={false}
  threshold={50}
>
  <div
    className="item"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Pizza Pepperoni
  </div>
  <div
    className="item active"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Pizza Capricciosa
  </div>
  <div
    className="item disabled"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Pizza Margherita
  </div>
</InfiniteScroll>
`;

exports[`MacroList component should render the macro list 1`] = `
<InfiniteScroll
  className="component"
  load={[Function]}
  loadMore={false}
  threshold={50}
>
  <div
    className="item active"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Pizza Pepperoni
  </div>
  <div
    className="item"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Pizza Capricciosa
  </div>
  <div
    className="item"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Pizza Margherita
  </div>
</InfiniteScroll>
`;
